--- a/attendee-active.html
+++ b/attendee-active.html
@@ -13,8 +13,35 @@
 </header>
 
 <section>
-	
+	<header>
+		<h2>Realtime Web Apps &amp; the Mobile Internet</h2>
+		<p>Presented by Jason Lengstorf</p>
+	</header>
+
+	<form id="ask-a-question">
+		<label>
+			If you have a question and you don't see it below, ask it here.
+			<input type="text" name="new-question" tabindex="1">
+		</label>
+		<input type="submit" value="Ask" tabindex="2">
+	</form>
+
+	<ul id="questions">
+		<li id="question-1" data-count="27">
+			<p>What is the best way to implement realtime features today?</p>
+			<form class="vote">
+				<input value="I also have this question" type="submit">
+			</form>
+		</li><!--END question-1 -->
+		<li id="question-2" data-count="14">
+			<p>Does this work on browsers that don't support the WebSockets API?</p>
+			<form class="vote">
+				<input value="I also have this question" type="submit">
+			</form>
+		</li><!--END question-2 -->
+	</ul>
 </section>
+
 
 <footer>
 	<ul>
