starting with back end part, added folder structure

--- a/presenter.html
+++ b/presenter.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Realtime Q&amp;A</title>
 	<script type="text/javascript" src=""></script>	
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
 
@@ -11,6 +11,7 @@
 	<h1>Realtime Q&amp;A</h1>
 	<p class="tagline">A live feedback system for classes, presentation, and conferences</p>
 </header>
+
 
 <section>
 	<header>
